# fallible-async-iterator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: unit-test.yml
src/: adaptors.rs  lib.rs  ops.rs
src/adaptors/: futures_core.rs  std_async_iterator.rs  std_iterator.rs
src/ops/: filter.rs  fold.rs  inspect.rs  map.rs  retry.rs  transpose.rs
